feat(dp): add offline model upload management
